--- a/index.html
+++ b/index.html
@@ -3,65 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PantherFi</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background-color: #0a0a0a;
-            color: #e0e0e0;
-        }
+    <title>PantherFi - Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Header -->
+    <header>
+        <div class="logo"><img src="images/logo.png" alt="PantherFi" style="height:40px;"></div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="features.html">Features</a>
+            <a href="roadmap.html">Roadmap</a>
+        </nav>
+    </header>
 
-        header {
-            padding: 20px 40px;
-            background-color: #0f0f0f;
-            border-bottom: 1px solid #1f1f1f;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>PantherFi – DeFi ReEngineered</h1>
+        <p>PantherFi is a decentralized finance protocol that makes lending, borrowing, and earning crypto simple, secure, and efficient. Stake tokens, access algorithmic loans, and earn automated rewards.</p>
+    </section>
 
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-            color: #c0c0c0;
-        }
+    <!-- DeFi Simulator Section -->
+    <section class="section">
+        <h2>PantherFi DeFi Simulator</h2>
 
-        .hero {
-            padding: 120px 40px;
-            text-align: center;
-        }
+        <!-- Wallet -->
+        <button id="connectWallet">Connect Wallet</button>
+        <p id="walletAddress">Wallet not connected</p>
 
-        .hero h1 {
-            font-size: 48px;
-            font-weight: 800;
-            color: #ffffff;
-            margin-bottom: 20px;
-        }
+        <!-- Balance -->
+        <p>Your Balance: <span id="balance">1000</span> PantherFi Tokens</p>
 
-        .hero p {
-            font-size: 20px;
-            color: #b5b5b5;
-            max-width: 700px;
-            margin: 0 auto;
-            line-height: 1.6;
-        }
+        <!-- Lending -->
+        <input type="number" id="lendAmount" placeholder="Amount to Lend">
+        <button id="lendBtn">Lend</button>
 
-        .btn {
-            display: inline-block;
-            margin-top: 30px;
-            padding: 14px 32px;
-            font-size: 18px;
-            text-decoration: none;
-            background-color: #1a1a1a;
-            border: 1px solid #333;
-            color: #e0e0e0;
-            border-radius: 6px;
-            transition: 0.3s;
-        }
+        <!-- Borrowing -->
+        <input type="number" id="borrowAmount" placeholder="Amount to Borrow">
+        <button id="borrowBtn">Borrow</button>
+    </section>
 
-        .btn:hover {
-            background-color: #2a2a2a;
-        }
+    <!-- Footer -->
+    <footer>
+        © 2025 PantherFi — A Minimalist DeFi Protocol
+    </footer>
 
-        .
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
+    <script>
+        // Wallet Connection
+        const connectWallet = async () => {
+            if (window.ethereum) {
+                try {
+                    const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+                    document.getElementById('walletAddress').innerText = "Connected: " + accounts[0];
+                    alert('Wallet connected successfully!');
+                } catch (err) {
+                    console.error(err);
+                    alert('Wallet connection failed.');
+                }
+            } else {
+                alert('Please install MetaMask!');
+            }
+        };
+        document.getElementById('connectWallet').onclick = connectWallet;
+
+        // Simulated Lending & Borrowing
+        let userBalance = 1000;
+
+        const updateBalance = () => {
+            document.getElementById('balance').innerText = userBalance;
+        };
+
+        document.getElementById('lendBtn').onclick = () => {
+            let amount = Number(document.getElementById('lendAmount').value);
+            if (amount > 0 && amount <= userBalance) {
+                userBalance -= amount;
+                alert(`You lent ${amount} PantherFi tokens!`);
+                updateBalance();
+                document.getElementById('lendAmount').value = '';
+            } else {
+                alert('Invalid lending amount.');
+            }
+        };
+
+        document.getElementById('borrowBtn').onclick = () => {
+            let amount = Number(document.getElementById('borrowAmount').value);
+            if (amount > 0) {
+                userBalance += amount;
+                alert(`You borrowed ${amount} PantherFi tokens!`);
+                updateBalance();
+                document.getElementById('borrowAmount').value = '';
+            } else {
+                alert('Invalid borrowing amount.');
+            }
+        };
+    </script>
+</body>
+</html>
