Revise About section for clarity and conciseness

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
     <section class="section">
         <h2>About PantherFi</h2>
-        <p>PantherFi is designed to simplify decentralized finance. Users can lend, borrow, and earn crypto securely and efficiently. Our mission is to create a fast, safe, and user-friendly DeFi ecosystem.</p>
+        <p>PantherFi simplifies decentralized finance for users. Deposit, borrow, and stake crypto securely. Our mission is to build a fast, safe, and user-friendly DeFi ecosystem for both beginners and experts.</p>
     </section>
 
     <footer>
