--- a/roadmap.html
+++ b/roadmap.html
@@ -20,9 +20,9 @@
     <section class="section">
         <h2>Roadmap</h2>
         <ul>
-            <li>Q1 2025: Launch Testnet version of PantherFi</li>
-            <li>Q2 2025: Implement lending & borrowing features</li>
-            <li>Q3 2025: Add staking and rewards system</li>
+            <li>Q1 2025: Launch Testnet version</li>
+            <li>Q2 2025: Implement lending & borrowing</li>
+            <li>Q3 2025: Add staking and rewards</li>
             <li>Q4 2025: Mainnet deployment & marketing</li>
         </ul>
     </section>
@@ -32,3 +32,4 @@
     </footer>
 </body>
 </html>
+
